--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.6.2</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
