--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/ddblog?useSSL=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://116.62.159.103:3306/ddblog?useSSL=true&serverTimezone=UTC
 ##&amp&amp;autoReconnect=true&amp;failOverReadOnly=false&amp;allowPublicKeyRetrieval=true&amp;serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=mcd@1999#new
 
 logging.level.com.finup.dq.dataquality.mapper.DqMeasureRuleMapper=debug
 
